fix: up z-index of dropdown menu to show above the next button

--- a/src/index.scss
+++ b/src/index.scss
@@ -63,6 +63,10 @@ body {
     top: -14px;
     margin: 0 auto;
   }
+
+  .dropdown-menu {
+    z-index: 1001;
+  }
 }
 
 body > div {
